# drippet

./: '  .gitignore  CMakeLists.txt  cspell.json
docs/: ble.md  ble_writes.md
drippet_head/: drippet_node
drippet_head/main/: CMakeLists.txt  drippet.cpp
drippet_head/main/ble/: gap_manager.cpp  gatt_service.cpp
drippet_head/main/core/: CMakeLists.txt
drippet_head/main/core/env/esp32/: esp32config.hpp  esp_button.cpp  esp_switch.hpp  logger.cpp  nvs_storage.cpp  nvs_storage.hpp  queue.hpp  steady_clock.cpp
drippet_head/main/core/include/: ble_link_interface.hpp  ble_types.hpp  clock.hpp  config.hpp  conn_context.hpp  constants.hpp  driver.hpp  external_requests.hpp  gatt_attribute.hpp  gatt_char.hpp  gatt_service.hpp  head.hpp  logger.hpp  named_types.hpp  node.hpp  protocol.hpp  protocol_types.hpp  secondary_attribute.hpp  self_node.hpp  storage.hpp  switch.hpp  type_cast.hpp  util.hpp
drippet_head/main/core/src/: CMakeLists.txt  ble_link_interface.cpp  clock.cpp  gatt_attribute.cpp  head.cpp  node.cpp  protocol.cpp  secondary_attribute.cpp  self_node.cpp
drippet_head/main/core/tests/: CMakeLists.txt  ble_test.cpp  fixtures.hpp  mocks.hpp  old_head.cpp  test_file.cpp
drippet_head/main/core/tests/setups/: node.hpp
drippet_head/main/tasks/: bluetooth_task.cpp  bluetooth_task.hpp  head_entrypoint.cpp  head_entrypoint.hpp  head_status_task.cpp  head_status_task.hpp  head_task.cpp  head_task.hpp  init_pairing_task.cpp  init_pariring_task.hpp  node_status_task.cpp  node_status_task.hpp  self_node_task.cpp  self_node_task.hpp  status_task.cpp  status_task.hpp  task.cpp  task.hpp  uart_task.cpp  uart_task.hpp  watering_task.hpp
drippet_node/: CMakeLists.txt  shared
drippet_node/main/: CMakeLists.txt  main.cpp
drippet_node/main/core/: CMakeLists.txt
drippet_node/main/core/include/: clock.hpp  node.hpp  self_node.hpp  steady_clock.hpp
drippet_node/main/core/src/: self_node.cpp
drippet_node/main/tasks/: node_task.cpp
drippet_py/: .gitignore  ble_task.py  check_ports.py  cli_test.py  constants.py  main.py  search.py  uart.py
drippet_py/ble/: __init__.py  ble.py  ble_task.py  discover.py
drippet_py/tests/: ble_parse.py  head_uart_test.py  mocks.py  uart_test.py
drippet_py/transport/: __init__.py  head_uart.py  uart.py
main/: CMakeLists.txt  drippet.cpp
main/ble/: gap_manager.cpp  gatt_service.cpp
main/core/: CMakeLists.txt  default.profraw  doop  main.cpp  rs485_init.c
main/core/.cache/clangd/index/: config.hpp.EEDFAFB905A766CC.idx  constants.hpp.9948D4F2FFCD7161.idx  fixtures.hpp.351E6FA8B47B124D.idx  head.cpp.5129338DECFFB722.idx  head.hpp.FF44A939789D423F.idx  head_test.cpp.EA55FFDB04816A80.idx  main.cpp.986C8ECCC8FAB1A6.idx  node.cpp.2FD992320D39D51D.idx  node.hpp.05E98E6235D0CE8F.idx  node_test.cpp.C16E2961BE009324.idx  time.cpp.79DDD40BBA50E307.idx  time.hpp.C95D61E30E2D98CB.idx
main/core/env/esp32/: clock.cpp  driver.cpp  logger.cpp  nvs_storage.cpp  nvs_storage.hpp  time.cpp  uart.cpp
main/core/env/host/: logger.cpp  time.cpp
main/core/include/: bluetooth_task.hpp  clock.hpp  config.hpp  conn_context.hpp  constants.hpp  driver.hpp  gap_manager.hpp  gatt_attribute.hpp  gatt_service.hpp  head.hpp  logger.hpp  node.hpp  node_desc_attr.hpp  protocol.hpp  protocol_types.hpp  storage.hpp  time.hpp  uart.hpp  util.hpp
main/core/src/: CMakeLists.txt  bluetooth_task.cpp  clock.cpp  gatt_attribute.cpp  gatt_service.cpp  head.cpp  node.cpp  node_desc_attr.cpp  protocol.cpp
main/core/tests/: CMakeLists.txt  ble_test.cpp  clock_test.cpp  fixtures.hpp  head_test.cpp  mocks.hpp  node_test.cpp  old_head.cpp  transport_test.cpp
main/queues/: queue.hpp
main/tasks/: bluetooth_task.cpp  bluetooth_task.hpp  head_task.cpp  head_task.hpp  status_task.cpp  task.cpp  task.hpp  uart_task.cpp  uart_task.hpp
shared/: CMakeLists.txt
shared/env/esp32/: driver.cpp  esp32config.hpp  esp_button.hpp  esp_solenoid.hpp  esp_switch.hpp  node_status_task.cpp  node_status_task.hpp  node_task.cpp  node_task.hpp  self_node_task.cpp  self_node_task.hpp  task.hpp  uart_task.cpp  uart_task.hpp
shared/include/: config.hpp  constants.hpp  logger.hpp  protocol_types.hpp  switch.hpp  util.hpp
tests/: CMakeLists.txt  ble_test.cpp  clock_test.cpp  fixtures.hpp  head_test.cpp  mocks.hpp  mocks_test.cpp  node_test.cpp  old_node.cpp  self_node_test.cpp  transport_test.cpp  utils_test.cpp
